[ch13275] Fix kb categories display on mobile

--- a/packages/portal-style/src/modules/_kb-category-title.scss
+++ b/packages/portal-style/src/modules/_kb-category-title.scss
@@ -10,7 +10,7 @@
     display: flex;
     margin: 0 20px 0 0;
     .dp-po-icon {
-
+      height: 26px;
       img {
         max-width: 26px;
         max-height: 26px;
