--- a/packages/portal-style/src/responsive/modules/_kb-category.scss
+++ b/packages/portal-style/src/responsive/modules/_kb-category.scss
@@ -25,7 +25,7 @@
     .dp-po-category-title {
       &-link {
         margin: 0 0 15px;
-        height: auto;
+        height: 50px;
       }
     }
   }
