--- a/packages/portal-style/src/responsive/modules/_kb-featured.scss
+++ b/packages/portal-style/src/responsive/modules/_kb-featured.scss
@@ -16,5 +16,8 @@
       font-size: $s14;
       margin-right: 10px;
     }
+    .dp-po-category-title-expand {
+      top: 15px;
+    }
   }
 }
